ui-deployment/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propati-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: propati-ui
  template:
    metadata:
      labels:
        app: propati-ui
    spec:
      containers:
        - name: propati-ui
          image: fusesl/propati-ui:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
