ui-deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: propati-ui-service
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 30001
      protocol: TCP
