ui-deployment/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: propati-ui-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: app.propati.co
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: propati-ui-service
                port:
                  number: 3000
